# RapidSift

./: README.md
filters/content/: CMakeLists.txt  LICENSE_COMPLIANCE.md  README.md  build.sh
filters/content/config/: blocked_domains.txt  pii_patterns.json  toxicity_keywords.txt
filters/content/examples/: CMakeLists.txt  license_compliance_example.cpp  simple_example.cpp
filters/content/include/rapidsift/: content_common.hpp  content_processor.hpp  domain_filter.hpp  license_filter.hpp  pii_filter.hpp  toxicity_filter.hpp
filters/content/src/: domain_filter.cpp  license_filter.cpp  main.cpp  pii_filter.cpp
filters/dedup/: CMakeLists.txt  DECONTAMINATION.md  FEATURES.md  README.md  build.sh
filters/dedup/examples/: CMakeLists.txt  decontamination_example.cpp  language_filter_example.cpp  simple_example.cpp  text_extraction_example.cpp
filters/dedup/include/rapidsift/: common.hpp  decontamination_filter.hpp  exact_dedup.hpp  language_filter.hpp  near_dedup.hpp  text_extractor.hpp
filters/dedup/src/: decontamination_filter.cpp  exact_dedup.cpp  language_filter.cpp  main.cpp  near_dedup.cpp  text_extractor.cpp  text_extractor_utils.cpp  utils.cpp
filters/dedup/tests/: create_test_data.cpp  performance_test.cpp  run_all_tests.cpp  test_exact_dedup.cpp  test_framework.hpp  test_language_filter.cpp  test_near_dedup.cpp  test_text_extractor.cpp  test_utils.cpp
filters/quality/: CMakeLists.txt  FEATURES.md  MODEL_FILTERING.md  README.md  build.sh
filters/quality/examples/: CMakeLists.txt  model_filtering_example.cpp  simple_example.cpp
filters/quality/include/rapidsift/: format_filter.hpp  gibberish_filter.hpp  length_filter.hpp  metadata_filter.hpp  model_quality_filter.hpp  quality_common.hpp  quality_processor.hpp  repetition_filter.hpp
filters/quality/src/: gibberish_filter.cpp  length_filter.cpp  main.cpp  model_quality_filter.cpp  repetition_filter.cpp  utils.cpp
scripts/: baseline.cpp
utils/fasttext/: readvec.cpp
